--- a/client/package.json
+++ b/client/package.json
@@ -24,7 +24,8 @@
     "react-navigation-stack": "^1.9.4",
     "react-navigation-tabs": "^2.5.6",
     "react-redux": "^7.1.1",
-    "redux": "^4.0.4"
+    "redux": "^4.0.4",
+    "yarn": "^1.19.1"
   },
   "devDependencies": {
     "babel-preset-expo": "^7.0.0"
