--- a/client/package.json
+++ b/client/package.json
@@ -13,10 +13,13 @@
     "react-dom": "16.8.3",
     "react-native": "https://github.com/expo/react-native/archive/sdk-35.0.0.tar.gz",
     "react-native-animated-nav-tab-bar": "^1.0.4",
+    "react-native-card-ui": "^1.1.1",
     "react-native-circular-action-menu": "^0.5.0",
     "react-native-elements": "^1.2.6",
     "react-native-gesture-handler": "^1.4.1",
+    "react-native-linear-gradient": "^2.5.6",
     "react-native-reanimated": "^1.3.0",
+    "react-native-size-matters": "^0.2.1",
     "react-native-snap-carousel": "^3.8.2",
     "react-native-vector-icons": "^6.6.0",
     "react-native-web": "^0.11.7",
