--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "react-native-easy-grid": "^0.2.2",
     "react-native-elements": "^1.2.6",
     "react-native-gesture-handler": "^1.4.1",
+    "react-native-keyboard-aware-scroll-view": "^0.9.1",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-reanimated": "^1.3.0",
     "react-native-size-matters": "^0.2.1",
