--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "react-native-reanimated": "^1.3.0",
     "react-native-size-matters": "^0.2.1",
     "react-native-snap-carousel": "^3.8.2",
+    "react-native-stars-rating": "^0.1.7",
     "react-native-vector-icons": "^6.6.0",
     "react-native-web": "^0.11.7",
     "react-navigation": "^4.0.10",
