--- a/client/package.json
+++ b/client/package.json
@@ -8,7 +8,9 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "class-autobind": "^0.1.4",
     "expo": "^35.0.0",
+    "expo-google-app-auth": "^7.0.0",
     "react": "16.8.3",
     "react-dom": "16.8.3",
     "react-native": "https://github.com/expo/react-native/archive/sdk-35.0.0.tar.gz",
