--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "react-native-gesture-handler": "^1.4.1",
     "react-native-keyboard-aware-scroll-view": "^0.9.1",
     "react-native-linear-gradient": "^2.5.6",
+    "react-native-modal-datetime-picker": "^7.6.0",
     "react-native-reanimated": "^1.3.0",
     "react-native-size-matters": "^0.2.1",
     "react-native-snap-carousel": "^3.8.2",
@@ -40,7 +41,7 @@
   "private": true,
   "rnpm": {
     "assets": [
-	    "./assets/fonts/"
+      "./assets/fonts/"
     ]
   }
 }
