--- a/client/package.json
+++ b/client/package.json
@@ -33,7 +33,8 @@
     "react-navigation-stack": "^1.9.4",
     "react-navigation-tabs": "^2.5.6",
     "react-redux": "^7.1.1",
-    "redux": "^4.0.4"
+    "redux": "^4.0.4",
+    "tipsi-stripe": "^7.5.1"
   },
   "devDependencies": {
     "babel-preset-expo": "^7.0.0"
